--- a/style.css
+++ b/style.css
@@ -246,18 +246,20 @@ h2 {
 .info-project {
   text-align: center;
 }
+/* button index */
 .btn {
+  z-index: 1;
   background: transparent;
-  color: white;
+  color: #202020;
   border-color: transparent;
   text-transform: capitalize;
   font-size: 1.25rem;
   letter-spacing: 1px;
-  margin: 2rem auto;
+  margin: 1rem 0;
   transition: all 0.3s ease-in-out;
   cursor: pointer;
-  padding: 0.25rem 4rem;
   line-height: 1;
+  padding: 0.5rem 0rem;
   outline-color: white;
   position: relative;
 }
@@ -269,19 +271,56 @@ h2 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  transition: all 0.6s ease;
+  transition: all 0.9s ease;
+  z-index: -1;
+  background: #202020;
+}
+.btn:hover::before {
+  width: 100%;
+}
+.btn:hover {
+  border-right: 2px solid #202020;
+  color: white;
+}
+/* button project */
+.btn-project {
+  z-index: 1;
+  background: transparent;
+  color: white;
+  border-color: transparent;
+  text-transform: capitalize;
+  font-size: 1.25rem;
+  letter-spacing: 1px;
+  margin: 1rem 0;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  line-height: 1;
+  padding: 0.5rem 0rem;
+  outline-color: white;
+  position: relative;
+}
+.btn-project::before {
+  content: "";
+  height: 100%;
+  width: 0%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: all 0.9s ease;
   z-index: -1;
   background: white;
 }
-.btn:hover::before {
-  width: 80%;
+.btn-project:hover::before {
+  width: 100%;
 }
-.btn:hover {
-  border-left: 2px solid white;
+.btn-project:hover {
+  border-right: 2px solid white;
   color: #202020;
 }
 .container-btn {
   display: flex;
+  justify-content: center;
 }
 
 /*! media query */
