--- a/style.css
+++ b/style.css
@@ -7,6 +7,74 @@
   padding: 0;
   box-sizing: border-box;
 }
+/* !preloader */
+.bodyLoader {
+  margin: 0;
+  font-family: "Source sans pro", sans-serif;
+  min-height: 100vh;
+  display: grid;
+  place-content: center;
+  text-align: center;
+  background-color: #202020;
+  color: whitesmoke;
+}
+
+.titleLoader {
+  font-size: clamp(1rem, 3vw + 1rem, 4rem);
+  position: relative;
+  font-family: "Source Code Pro";
+  width: max-content;
+}
+
+.titleLoader::before,
+.titleLoader::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.titleLoader::before {
+  background-color: #202020;
+  animation: typewriter 6s steps(26) 1s forwards;
+}
+
+.titleLoader::after {
+  width: 0.125em;
+  background: whitesmoke;
+  animation: typewriter 6s steps(26) 1s forwards, blink 750ms steps(26) infinite;
+}
+
+.subtitle {
+  font-family: "Source Code Pro";
+  font-size: 2rem;
+  font-weight: 400;
+  opacity: 0;
+  transform: translateY(3rem);
+  animation: fadeInUp 2s ease calc(+8s) forwards;
+}
+
+@keyframes typewriter {
+  to {
+    left: 100%;
+  }
+}
+
+@keyframes blink {
+  to {
+    background: transparent;
+  }
+}
+
+@keyframes fadeInUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 a {
   color: white;
   text-decoration: none;
@@ -246,7 +314,7 @@ h2 {
 .info-project {
   text-align: center;
 }
-/* button index */
+/*! button index */
 .btn {
   z-index: 1;
   background: transparent;
@@ -282,7 +350,7 @@ h2 {
   border-right: 2px solid #202020;
   color: white;
 }
-/* button project */
+/*! button project */
 .btn-project {
   z-index: 1;
   background: transparent;
@@ -315,12 +383,16 @@ h2 {
   width: 100%;
 }
 .btn-project:hover {
-  border-right: 2px solid white;
+  border-left: 2px solid white;
   color: #202020;
 }
 .container-btn {
   display: flex;
   justify-content: center;
+}
+
+/* !preloader */
+#preloader {
 }
 
 /*! media query */
