--- a/style.css
+++ b/style.css
@@ -1,59 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&family=Zen+Kaku+Gothic+New:wght@300&display=swap");
 *,
 ::after,
 ::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-/* !preloader */
-.bodyLoader {
-  margin: 0;
-  font-family: "Source sans pro", sans-serif;
-  min-height: 100vh;
-  display: grid;
-  place-content: center;
-  text-align: center;
-  background-color: #202020;
-  color: whitesmoke;
-}
-
-.titleLoader {
-  font-size: clamp(1rem, 3vw + 1rem, 4rem);
-  position: relative;
-  font-family: "Source Code Pro";
-  width: max-content;
-}
-
-.titleLoader::before,
-.titleLoader::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-
-.titleLoader::before {
-  background-color: #202020;
-  animation: typewriter 6s steps(26) 1s forwards;
-}
-
-.titleLoader::after {
-  width: 0.125em;
-  background: whitesmoke;
-  animation: typewriter 6s steps(26) 1s forwards, blink 750ms steps(26) infinite;
-}
-
-.subtitle {
-  font-family: "Source Code Pro";
-  font-size: 2rem;
-  font-weight: 400;
-  opacity: 0;
-  transform: translateY(3rem);
-  animation: fadeInUp 2s ease calc(+8s) forwards;
 }
 
 @keyframes typewriter {
@@ -392,7 +344,106 @@ h2 {
 }
 
 /* !preloader */
-#preloader {
+.bodyLoader {
+  margin: 0;
+  font-family: "Source sans pro", sans-serif;
+  min-height: 100vh;
+  display: grid;
+  place-content: center;
+  text-align: center;
+  background-color: #202020;
+  color: whitesmoke;
+}
+
+.titleLoader {
+  font-size: clamp(1rem, 3vw + 1rem, 4rem);
+  position: relative;
+  font-family: "Source Code Pro";
+  width: max-content;
+}
+
+.titleLoader::before,
+.titleLoader::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.titleLoader::before {
+  background-color: #202020;
+  animation: typewriter 6s steps(26) 1s forwards;
+}
+
+.titleLoader::after {
+  width: 0.125em;
+  background: whitesmoke;
+  animation: typewriter 6s steps(26) 1s forwards, blink 750ms steps(26) infinite;
+}
+
+.subtitle {
+  margin-top: 2rem;
+  font-family: "Source Code Pro";
+  font-size: 2rem;
+  font-weight: 400;
+  opacity: 0;
+  transform: translateY(3rem);
+  animation: fadeInUp 2s ease calc(+8s) forwards;
+}
+
+.loading {
+  font-family: "Source sans pro", sans-serif;
+  color: whitesmoke;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #202020;
+  display: grid;
+  place-content: center;
+  text-align: center;
+  z-index: 999;
+  transition: all 0.2s linear;
+  -webkit-animation: slide-out-left 2s cubic-bezier(0.55, 0.085, 0.68, 0.53) 10s
+    both;
+  animation: slide-out-left 2s cubic-bezier(0.55, 0.085, 0.68, 0.53) 10s both;
+}
+
+.hideLoader {
+  visibility: hidden;
+  z-index: -100;
+}
+/**
+ * ----------------------------------------
+ * animation slide-out-left
+ * ----------------------------------------
+ */
+@-webkit-keyframes slide-out-left {
+  0% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: translateX(-1000px);
+    transform: translateX(-1000px);
+    opacity: 0;
+  }
+}
+@keyframes slide-out-left {
+  0% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: translateX(-1000px);
+    transform: translateX(-1000px);
+    opacity: 0;
+  }
 }
 
 /*! media query */
