--- a/style.css
+++ b/style.css
@@ -268,7 +268,7 @@ body {
   overflow: hidden;
 }
 .slides {
-  width: 500px;
+  width: 300px;
   height: 500px;
   display: flex;
 }
@@ -291,14 +291,16 @@ img {
 /* css pour manual slide nav */
 
 .navigation-manuel {
+  left: 50%;
+  transform: translateX(-50%);
   position: absolute;
-  width: 800px;
+  width: 55%;
   margin-top: -40px;
   display: flex;
   justify-content: center;
 }
 .manuel-btn {
-  border: 2px solid red;
+  border: 2px solid #202020;
   padding: 5px;
   border-radius: 10px;
   cursor: pointer;
@@ -308,20 +310,20 @@ img {
   margin-right: 40px;
 }
 .manuel-btn:hover {
-  background: red;
+  background: #202020;
 }
 
 #radio1:checked ~ .first {
   margin-left: 0%;
 }
 #radio2:checked ~ .first {
-  margin-left: -160%;
+  margin-left: -266%;
 }
 #radio3:checked ~ .first {
-  margin-left: -320%;
+  margin-left: -533%;
 }
 #radio4:checked ~ .first {
-  margin-left: -480%;
+  margin-left: -799%;
 }
 
 /*! button index */
@@ -529,6 +531,82 @@ img {
 @media (max-width: 325px) {
   .aboutImg {
     margin-top: 120%;
+  }
+}
+
+@media (max-width: 720px) {
+  .bodyLoader {
+    margin: 0;
+    font-family: "Source sans pro", sans-serif;
+    min-height: 100vh;
+    display: grid;
+    place-content: center;
+    text-align: center;
+    background-color: #202020;
+    color: whitesmoke;
+  }
+
+  .titleLoader {
+    font-size: clamp(1rem, 3vw + 1rem, 4rem);
+    position: relative;
+    font-family: "Source Code Pro";
+    width: 320px;
+  }
+
+  .titleLoader::before,
+  .titleLoader::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
+
+  .titleLoader::before {
+    background-color: #202020;
+    animation: typewriter 6s steps(30) 1s forwards;
+  }
+
+  .titleLoader::after {
+    width: 0.125em;
+    background: whitesmoke;
+    animation: typewriter 6s steps(30) 1s forwards,
+      blink 750ms steps(30) infinite;
+  }
+
+  .subtitle {
+    margin-top: 2rem;
+    font-family: "Source Code Pro";
+    font-size: 2rem;
+    font-weight: 200;
+    opacity: 0;
+    transform: translateY(3rem);
+    animation: fadeInUp 2s ease calc(+8s) forwards;
+  }
+
+  .loading {
+    font-family: "Source sans pro", sans-serif;
+    color: whitesmoke;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #202020;
+    display: grid;
+    place-content: center;
+    text-align: center;
+    z-index: 999;
+    transition: all 0.2s linear;
+    -webkit-animation: slide-out-left 2s cubic-bezier(0.55, 0.085, 0.68, 0.53)
+      10s both;
+    animation: slide-out-left 2s cubic-bezier(0.55, 0.085, 0.68, 0.53) 10s both;
+  }
+
+  .hideLoader {
+    visibility: hidden;
+    z-index: -100;
   }
 }
 
