--- a/style.css
+++ b/style.css
@@ -532,10 +532,15 @@ img {
   .aboutImg {
     margin-top: 120%;
   }
+}
+
+@media (max-width: 720px) {
   .project-body {
     height: 100vh;
-    display: flex;
+    display: grid;
     flex-direction: column;
+  }
+  .btn-project {
   }
 
   /*? projet test */
@@ -576,7 +581,7 @@ img {
   /* css pour manual slide nav */
 
   .navigation-manuel {
-    left: 50%;
+    top: 60%;
     transform: translateX(-50%);
     position: absolute;
     width: 55%;
@@ -585,7 +590,7 @@ img {
     justify-content: center;
   }
   .manuel-btn {
-    border: 2px solid #202020;
+    border: 2px solid white;
     padding: 5px;
     border-radius: 10px;
     cursor: pointer;
@@ -595,7 +600,7 @@ img {
     margin-right: 40px;
   }
   .manuel-btn:hover {
-    background: #202020;
+    background: white;
   }
 
   #radio1:checked ~ .first {
@@ -610,81 +615,27 @@ img {
   #radio4:checked ~ .first {
     margin-left: -300%;
   }
-}
-
-@media (max-width: 720px) {
-  .bodyLoader {
-    margin: 0;
-    font-family: "Source sans pro", sans-serif;
-    min-height: 100vh;
-    display: grid;
-    place-content: center;
-    text-align: center;
-    background-color: #202020;
-    color: whitesmoke;
+  .btn-project:hover {
+    border-left: none;
   }
-
-  .titleLoader {
-    font-size: clamp(1rem, 3vw + 1rem, 4rem);
+  .btn-project {
+    z-index: 1;
+    background: transparent;
+    color: white;
+    border-color: transparent;
+    text-transform: capitalize;
+    font-size: 1.25rem;
+    letter-spacing: 1px;
+    margin: auto;
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+    line-height: 1;
+    padding: 0.5rem 0rem;
     position: relative;
-    font-family: "Source Code Pro";
-    width: 320px;
-  }
-
-  .titleLoader::before,
-  .titleLoader::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-  }
-
-  .titleLoader::before {
-    background-color: #202020;
-    animation: typewriter 6s steps(30) 1s forwards;
-  }
-
-  .titleLoader::after {
-    width: 0.125em;
-    background: whitesmoke;
-    animation: typewriter 6s steps(30) 1s forwards,
-      blink 750ms steps(30) infinite;
-  }
-
-  .subtitle {
-    margin-top: 2rem;
-    font-family: "Source Code Pro";
-    font-size: 2rem;
-    font-weight: 200;
-    opacity: 0;
-    transform: translateY(3rem);
-    animation: fadeInUp 2s ease calc(+8s) forwards;
   }
 
   .loading {
-    font-family: "Source sans pro", sans-serif;
-    color: whitesmoke;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: #202020;
-    display: grid;
-    place-content: center;
-    text-align: center;
-    z-index: 999;
-    transition: all 0.2s linear;
-    -webkit-animation: slide-out-left 2s cubic-bezier(0.55, 0.085, 0.68, 0.53)
-      10s both;
-    animation: slide-out-left 2s cubic-bezier(0.55, 0.085, 0.68, 0.53) 10s both;
-  }
-
-  .hideLoader {
-    visibility: hidden;
-    z-index: -100;
+    display: none;
   }
 }
 
